# quantum-computing-resources

./: .gitignore  .gitmodules  README.md  analysis_qasm_bench.sh  bench.py  clean_data.sh  conftest.py  constants.py  depths.csv  noise.py  reorder.py  requirements.txt  test.py  util.py
benchmarks/: ddqsim.py  mindquantum_test.py  qiskit_test.py  qsimcirq_test.py  quafu_test.py  rqc.py
benchmarks/qasm/: for_qvm_test_shor_n5.qasm  qft_n4.qasm  rqc.4.qasm
benchmarks/qasm3/: binary_and_unary_op.qasm  example.qasm
doc/: README.md  references.bib
learning/braket/: fetch_res.py  simple_circ_sim.py
learning/llm/: ds_math_7b_inst.py
learning/llm4ad/: requirements.txt  test.py
learning/misc/: myhdl_simple_router.py  newman_community_detection.java  requirements.txt  sum_over_path.py
learning/paddle/: classifier.py  qaoa.py
learning/pennylane/: amplitude.py  pennylane_qiskit_test.py  requirements.txt  state_preparation.py  tutorial_qnn_module_torch.py
learning/pytorch/: batch_custom_autograd.py  custom_autograd.py  jac.py  vjp.py
learning/qcontrol/: README.md  qcodes_example.py  requirements.txt
learning/qcover/: example.py
learning/qcp/: H.txt  README.md  T1_experiment.txt  sample_eqasm_sim.py
learning/qec/: README.md  heavy_hex_code.py  requirements.txt
learning/qiskit/: estimator.py  how-to-getting-started-with-sampler.py  param.py  qaoa.py  random_circuit_depth_compare.py  run_aer.sh  sabre.py  test_ibm_dist.py  test_operator.py
learning/quafu/: build_your_first_quantum_circuit.py  execution_and_simulation.py  measure_obs.py  sample.py  sample_2q_circ.py  sample_3q_circ.py  sample_5q_circ.py  sample_two_bell.py  test_backend.py  test_sim_qiskit.py
learning/quantastica/: demo.py  requirements.txt
learning/quantumsim/: getting_started.py  intro.ipynb  requirements.txt
learning/quingo/: README.md  bell_state.qu  bv.qi  dummy.qi  env.txt  my_parser.py  parser.py  qft.qi  qualesim_test.py  qualesim_test_2.py
logs/qdao/: README.md  (+6 more)
misc/: labquafu_dag.ipynb
paddle/: classifier.py
qdao/: README.md  circuit.py  converters.py  engine.py  executor.py  manager.py  qdao.py  simulator.py  simulator_provider.py  test.py  util.py
quafu/: sample.py
qvm/: backend_manager.py  backend_manager_test.py  bench_test.py  constants.py  exceptions.py  process_manager.py  qvm_integration.py  qvm_test.py  qvm_unittest.py  test_bench.py  test_qvm.py  util.py
real-machine/: access_ibm.py  util.py
scripts/: benchmarks.lst  compile_vs_runtime_QASMBench.sh  compile_vs_runtime_random.sh  compile_vs_runtime_random_large.sh  ideal_vs_depolarizing_QASMBench.sh  plot_bloch.py
sim-beta/: CMakeLists.txt  README.md  conanfile.txt
sim-beta/exp/: get_cpu_time.sh  run_random_28.sh
sim-beta/framework/: CMakeLists.txt
sim-beta/framework/include/framework/: circuit.h  operation.h  qobj.h  types.h
sim-beta/framework/src/: circuit.cpp  operation.cpp  qobj.cpp
sim-beta/operation/: CMakeLists.txt
sim-beta/operation/include/operation/: operation.h
sim-beta/simulator/: CMakeLists.txt  main.cpp
sim-beta/statevector/: CMakeLists.txt
sim-beta/statevector/include/statevector/: chunk.h  statevector.h  util.h
sim-beta/statevector/src/: chunk.cpp  statevector.cpp  util.cpp
sim-beta/test/: CMakeLists.txt
sim-beta/test/data/: cluster.json  qasmbench_static_analysis_20221014.txt  unitary.json  unitary_complete.json  unitary_complete_inst.json  unitary_complete_new.json  unitary_complete_new_1.json  unitary_complete_new_1_inst.json  unitary_complete_new_2.json  unitary_complete_new_2_inst.json  unitary_complete_new_3.json  unitary_complete_new_3_inst.json  unitary_complete_new_inst.json  unitary_inst.json  unitary_irregular.json  unitary_irregular_tiny.json  unitary_irregular_tiny_2.json  unitary_irregular_tiny_2_inst.json  unitary_irregular_tiny_3.json  unitary_irregular_tiny_3_inst.json  unitary_large.json  unitary_large_2.json  unitary_large_2_inst.json  unitary_large_inst.json  unitary_new.json  unitary_new_inst.json  unitary_random_10.json  unitary_random_10_inst.json  unitary_random_20.json  unitary_random_20_inst.json  unitary_random_22.json  unitary_random_22_inst.json  unitary_random_24.json  unitary_random_24_inst.json  unitary_random_26.json  unitary_random_26_inst.json  unitary_random_28.json  unitary_random_28_18_10_inst.json  unitary_random_28_18_16_inst.json  unitary_random_28_20_16_inst.json  (+14 more)
sim-beta/test/data/old/: unitary_random_28_26_16_inst.json  unitary_random_28_26_20_inst.json  unitary_random_28_26_22_inst.json  unitary_random_28_26_24_inst.json
sim-beta/test/include/: simtest.h
sim-beta/test/scripts/: circ_gen.28_18-26.txt  clean.sh  cmake_build.sh  random10.sh  random_bench.sh  random_io_bench.sh  test_circ_gen.py  unitary_circ_gen.py
sim-beta/test/src/: chunk_test.cpp  circuit_test.cpp  statevector_test.cpp
test/: base.py  qdao.py  qvm.py
tools/: monitor_mem.sh
util/: plot.py
utils/: misc.py  plot.py  results.py
(+308 files in other folders)
